--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                         galley of type and scrambled it to make a type specimen book.</p>
                     <a href="#" class="conheca__botao container">Leia mais
                         <svg width="23" height="25" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
+                            <path id="arrowIcon__botao"
                                 d="M22.6343 11.4835L14.7839 1.62941C14.6484 1.4607 14.4808 1.32044 14.2909 1.21668C14.101 1.11293 13.8925 1.04773 13.6773 1.02484C13.4621 1.00195 13.2445 1.02181 13.037 1.08329C12.8295 1.14476 12.6362 1.24664 12.4682 1.38306C12.2995 1.51859 12.1592 1.68613 12.0555 1.87604C11.9517 2.06596 11.8865 2.27451 11.8636 2.4897C11.8407 2.70489 11.8606 2.92249 11.9221 3.12998C11.9836 3.33747 12.0854 3.53077 12.2219 3.69876L19.2347 12.5181L11.877 21.3375C11.7387 21.5035 11.6345 21.6951 11.5704 21.9014C11.5062 22.1076 11.4834 22.3246 11.5033 22.5397C11.5231 22.7548 11.5852 22.9639 11.6859 23.1549C11.7867 23.346 11.9242 23.5153 12.0905 23.6532C12.3882 23.8922 12.7599 24.0199 13.1416 24.0145C13.3828 24.0149 13.6212 23.9621 13.8398 23.86C14.0584 23.7578 14.2518 23.6087 14.4062 23.4233L22.6179 13.5692C22.8618 13.2773 22.9967 12.9097 22.9997 12.5293C23.0027 12.1489 22.8736 11.7792 22.6343 11.4835Z"
                                 fill="#F5F5F5" />
-                            <path
+                            <path id="arrowIcon__botao"
                                 d="M3.28757 1.62951C3.01316 1.27887 2.6107 1.0516 2.16872 0.997704C1.72674 0.943804 1.28145 1.06769 0.930815 1.3421C0.580176 1.61651 0.352908 2.01898 0.299008 2.46096C0.245109 2.90293 0.368992 3.34822 0.643404 3.69886L7.73832 12.5182L0.38063 21.3212C0.242342 21.4871 0.138151 21.6788 0.074027 21.885C0.00990263 22.0913 -0.0128964 22.3082 0.00693631 22.5233C0.026769 22.7384 0.0888435 22.9475 0.189604 23.1386C0.290365 23.3297 0.427834 23.499 0.594135 23.6369C0.889612 23.8817 1.2615 24.0154 1.64523 24.0146C1.88651 24.015 2.12491 23.9622 2.34348 23.8601C2.56205 23.7579 2.75542 23.6088 2.90984 23.4234L11.1215 13.5693C11.3631 13.2755 11.4952 12.9069 11.4952 12.5264C11.4952 12.146 11.3631 11.7774 11.1215 11.4836L3.28757 1.62951Z"
                                 fill="#F5F5F5" />
                         </svg>
@@ -376,15 +376,17 @@
                 </div>
             </div>
             <div class="rodape__descricao">
-                <img src="imagens/ama-logo-footer.png" alt="Logo da AMA Itapoá">
-                <p class="rodape__texto">
-                    <svg width="14" height="20" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M7 9.5C6.33696 9.5 5.70107 9.23661 5.23223 8.76777C4.76339 8.29893 4.5 7.66304 4.5 7C4.5 6.33696 4.76339 5.70107 5.23223 5.23223C5.70107 4.76339 6.33696 4.5 7 4.5C7.66304 4.5 8.29893 4.76339 8.76777 5.23223C9.23661 5.70107 9.5 6.33696 9.5 7C9.5 7.3283 9.43534 7.65339 9.3097 7.95671C9.18406 8.26002 8.99991 8.53562 8.76777 8.76777C8.53562 8.99991 8.26002 9.18406 7.95671 9.3097C7.65339 9.43534 7.3283 9.5 7 9.5ZM7 0C5.14348 0 3.36301 0.737498 2.05025 2.05025C0.737498 3.36301 0 5.14348 0 7C0 12.25 7 20 7 20C7 20 14 12.25 14 7C14 5.14348 13.2625 3.36301 11.9497 2.05025C10.637 0.737498 8.85652 0 7 0Z"
-                            fill="#0046C2" />
-                    </svg>
-                    R. 1.530 Mariani Kummrow, Itapoá - SC
-                </p>
+                <img class="rodape__logo__ama" src="imagens/ama-logo-footer.png" alt="Logo da AMA Itapoá">
+                <a class="rodape__local-link" href="https://www.google.com.br/maps/place/Ama+Itapoa/@-26.1102082,-48.6063699,17z/data=!4m15!1m8!3m7!1s0x94d956d07e324dc7:0xf57e6264982d87b0!2sR.+1.530+Mariani+Kummrow+-+Centro,+Itapo%C3%A1+-+SC,+89249-000!3b1!8m2!3d-26.1103238!4d-48.6063699!16s%2Fg%2F11cnn_kjf0!3m5!1s0x94d957b1c930798d:0x72806c1df868a95c!8m2!3d-26.1098453!4d-48.601746!16s%2Fg%2F11nfn4ytp3?entry=ttu" target="_blank">
+                    <p class="rodape__texto">
+                        <svg width="14" height="20" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M7 9.5C6.33696 9.5 5.70107 9.23661 5.23223 8.76777C4.76339 8.29893 4.5 7.66304 4.5 7C4.5 6.33696 4.76339 5.70107 5.23223 5.23223C5.70107 4.76339 6.33696 4.5 7 4.5C7.66304 4.5 8.29893 4.76339 8.76777 5.23223C9.23661 5.70107 9.5 6.33696 9.5 7C9.5 7.3283 9.43534 7.65339 9.3097 7.95671C9.18406 8.26002 8.99991 8.53562 8.76777 8.76777C8.53562 8.99991 8.26002 9.18406 7.95671 9.3097C7.65339 9.43534 7.3283 9.5 7 9.5ZM7 0C5.14348 0 3.36301 0.737498 2.05025 2.05025C0.737498 3.36301 0 5.14348 0 7C0 12.25 7 20 7 20C7 20 14 12.25 14 7C14 5.14348 13.2625 3.36301 11.9497 2.05025C10.637 0.737498 8.85652 0 7 0Z"
+                                fill="#0046C2" />
+                        </svg>
+                        R. 1.530 Mariani Kummrow, Itapoá - SC
+                    </p>
+                </a>
                 <p class="rodape__texto">@2023 AMA Itapoá </p>
                 <p class="rodape__texto">Todos os direitos Reservados</p>
             </div>
