--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMA teste</title>
-    <link rel="stylesheet" href="/styles/alt_styles/resetcss.css">
+    <link rel="stylesheet" href="resetcss.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="styles/alt_styles/hamburgers.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
