--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="nav__container-desktop">
                 <a href="index.html" class="pages__link-desktop">HOME</a>
                 <a href="#" class="pages__link-desktop">AMA</a>
-                <a href="components/pages/noticias/" class="pages__link-desktop">NOTÍCIAS</a>
+                <a href="components/pages/noticias/noticias.html" class="pages__link-desktop">NOTÍCIAS</a>
                 <a href="#" class="pages__link-desktop">FOTOS</a>
                 <a href="#" target="_blank" class="pages__link-desktop">SOBRE O AUTISMO</a>
                 <a href="#" target="_blank" class="pages__link-desktop">CONTATO</a>
@@ -47,7 +47,7 @@
                     <a href="#" class="pages__item-link">AMA</a>
                 </li>
                 <li class="pages__item">
-                    <a href="#" class="pages__item-link">Notícias</a>
+                    <a href="components/pages/noticias/noticias.html" class="pages__item-link">Notícias</a>
                 </li>
                 <li class="pages__item">
                     <a href="#" class="pages__item-link">Fotos</a>
